# rag_app_prod_example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
db/: schema.sql
db/migrations/: 20231102175542_create_models.sql
db/queries/messages/: insert.sql  select_all.sql
requirements/: requirements-dev.txt  requirements.txt
src/app/: __init__.py  db.py
src/app/chat/: api.py  constants.py  exceptions.py  models.py  retrieval.py  services.py  streaming.py
src/app/core/: api.py  logs.py  middlewares.py  models.py
src/app/scripts/: ingest.py
src/app/settings/: __init__.py  base.py  gunicorn.conf.py
