[project]
name = "brag"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["fastapi", "openai", "tiktoken","pydantic-settings", "uvicorn", "gunicorn", "qdrant-client[fastembed]", "sentry-sdk", "pugsql", "psycopg2-binary", "python-docx", "PyPDF2", "python-multipart"]


[project.optional-dependencies]
dev = ["ruff", "black"]